Progress monitoring for aleap